--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
     <header>
         <div class="top-bar">
-            <a href="homepage.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="bio.html">ABOUT ME</a>
             <a href="skills.html">SKILLS & EXPERIENCE</a>
             <a href="contacts.html">CONTACT ME</a>
